@@ -5,6 +5,7 @@ Added ability to specify slipping map zoom and coordinates as arguments to the b
 Added an "inMemoryBbox" to the pgsql writer task allowing it to calculate bounding boxes using a memory mapped file.
 Added an automatic VACUUM ANALYZE of the database for pgsql writer and truncation tasks.
 Added a migration task --migrate allowing 0.5 data to be converted to 0.6 format.
+Added forceUtf8 and profileSql options to all MySQL tasks.
 
 0.29
 Fixed the --write-pgsql-simple-dump task to properly escape '\' characters.
